Added main navigation